kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prostovid
  labels:
    app: prostovid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prostovid
  template:
    metadata:
      labels:
        app: prostovid
    spec:
      containers:
        - name: prostovid
          image: prostovid
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
