kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prostovid
spec:
  selector:
    app: prostovid
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
