kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prostovid
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prostovid.djnd.si
        - prostovid.danesjenovdan.si
      secretName: prostovid-tls
  rules:
    - host: prostovid.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prostovid
                port:
                  number: 80
    - host: prostovid.danesjenovdan.si
      http: *http_paths
